--- a/모범답안0010.인터넷2중화1.md
+++ b/모범답안0010.인터넷2중화1.md
@@ -28,143 +28,210 @@
 
 ---
 
-## 2. 장비별 최종 CLI 설정 파일
+네트워크 엔지니어링 실무 및 강의 교재로 활용할 수 있도록, **L3 스위치 이중화(HSRP Priority 110)** 및 **ISP 로드밸런싱**이 적용된 전체 구성 프로세스를 정리했습니다. 각 장비의 CLI 프롬프트 변화와 필수 명령어(`no shutdown` 등)를 포함하여 한 번에 복사해서 사용할 수 있는 포맷으로 작성하였습니다.
 
-### Router0 (ISP 1 - 111.111.111.2)
+---
 
-백본에 2개 라우터를 붙여 인터넷 이중화 한 자주 쓰이는 사례 중 하나에요.
-두 라우터 아래 스위치를 넣고 DMZ 구간을 만드는 사례도 많습니다. 
+네트워크 가용성과 확장성을 극대화하기 위해 VLAN 10부터 120까지(10단위) 총 12개의 가상 LAN을 구성하고, 각 VLAN에 대해 **HSRP(Hot Standby Router Protocol)** 이중화와 **OSPF** 로드밸런싱을 적용한 전체 구축 공정입니다.
 
-```bash
-hostname Router0
-!
-interface GigabitEthernet0/0
- description OUTSIDE_ISP1
- ip address 111.111.111.2 255.255.255.252
- ip nat outside
-!
-interface GigabitEthernet0/1
- ip address 172.16.1.1 255.255.255.0
- ip nat inside
-!
-interface GigabitEthernet0/2
- ip address 172.16.4.1 255.255.255.0
- ip nat inside
-!
-!현장에서 로드밸런스 보다 OSPF 프로토콜로 단순화 해요.
-!하지만 네트워크가 많아지면 에어리어수가 많아지고 오버헤드(버거워지는)가 커지는 단점이 있어요.
-router ospf 1
- network 172.16.1.0 0.0.0.255 area 0
- network 172.16.4.0 0.0.0.255 area 0
- default-information originate
-!
-ip route 0.0.0.0 0.0.0.0 111.111.111.1
-ip nat inside source list 1 interface GigabitEthernet0/0 overload
-! overload는 헤더에 port를 오버로드해서 매핑테이블을 만들겠다는 의미로 제일 중요해요.
-access-list 1 permit 192.168.10.0 0.0.0.255
+---
 
-```
+## [STEP 1] Router0 설정 (ISP 1 서비스 및 외부 게이트웨이)
 
-### Router1 (ISP 2 - 222.222.222.2)
+Router0은 첫 번째 공인 IP를 관리하며, 내부 모든 VLAN 대역이 인터넷이 가능하도록 NAT 처리를 수행합니다.
 
 ```bash
-hostname Router1
-!
-interface GigabitEthernet0/0
- description OUTSIDE_ISP2
- ip address 222.222.222.2 255.255.255.252
- ip nat outside
-!
-interface GigabitEthernet0/1
- ip address 172.16.3.1 255.255.255.0
- ip nat inside
-!
-interface GigabitEthernet0/2
- ip address 172.16.2.1 255.255.255.0
- ip nat inside
-!
-router ospf 1
- network 172.16.3.0 0.0.0.255 area 0
- network 172.16.2.0 0.0.0.255 area 0
- default-information originate
-!
-ip route 0.0.0.0 0.0.0.0 222.222.222.1
-ip nat inside source list 1 interface GigabitEthernet0/0 overload
-access-list 1 permit 192.168.10.0 0.0.0.255
+Router> enable
+Router# configure terminal
+Router0(config)# hostname Router0
 
-```
+! --- 외부 ISP 1 인터페이스 활성화 ---
+Router0(config)# interface GigabitEthernet0/0
+Router0(config-if)# description Link_to_ISP1
+Router0(config-if)# ip address 111.111.111.2 255.255.255.252
+Router0(config-if)# ip nat outside             ! 외부망 선언
+Router0(config-if)# no shutdown                ! 포트 활성화
+Router0(config-if)# exit
 
-### Multilayer Switch 0 (Vlan 10 Active)
+! --- 내부 L3 스위치(백본) 연결 ---
+Router0(config)# interface GigabitEthernet0/1
+Router0(config-if)# ip address 172.16.1.1 255.255.255.0
+Router0(config-if)# ip nat inside              ! 내부망 선언
+Router0(config-if)# no shutdown
+Router0(config-if)# exit
 
-```bash
-hostname SW0
-!
-ip routing
-!
-interface GigabitEthernet0/1
- no switchport
- ip address 172.16.1.2 255.255.255.0
-!
-interface GigabitEthernet0/2
- no switchport
- ip address 172.16.3.2 255.255.255.0
-!
-interface Vlan 10
- ip address 192.168.10.2 255.255.255.0
- standby 10 ip 192.168.10.1
- standby 10 priority 110
- standby 10 preempt
-!
-router ospf 1
- network 172.16.1.0 0.0.0.255 area 0
- network 172.16.3.0 0.0.0.255 area 0
- network 192.168.10.0 0.0.0.255 area 0
+Router0(config)# interface GigabitEthernet0/2
+Router0(config-if)# ip address 172.16.4.1 255.255.255.0
+Router0(config-if)# ip nat inside
+Router0(config-if)# no shutdown
+Router0(config-if)# exit
 
-```
+! --- NAT 및 기본 경로 설정 ---
+Router0(config)# ip route 0.0.0.0 0.0.0.0 111.111.111.1
+Router0(config)# access-list 1 permit 192.168.0.0 0.0.255.255  ! 모든 내부 대역 허용
+Router0(config)# ip nat inside source list 1 interface GigabitEthernet0/0 overload
 
-### Multilayer Switch 1 (Vlan 10 Standby)
-
-```bash
-hostname SW1
-!
-ip routing
-!
-interface GigabitEthernet0/1
- no switchport
- ip address 172.16.4.2 255.255.255.0
-!
-interface GigabitEthernet0/2
- no switchport
- ip address 172.16.2.2 255.255.255.0
-!
-interface Vlan 10
- ip address 192.168.10.2 255.255.255.0
- standby 10 ip 192.168.10.1
- standby 10 priority 100
- standby 10 preempt
-!
-router ospf 1
- network 172.16.4.0 0.0.0.255 area 0
- network 172.16.2.0 0.0.0.255 area 0
- network 192.168.10.0 0.0.0.255 area 0
+! --- OSPF 라우팅 설정 ---
+Router0(config)# router ospf 1
+Router0(config-router)# network 172.16.1.0 0.0.0.255 area 0
+Router0(config-router)# network 172.16.4.0 0.0.0.255 area 0
+Router0(config-router)# default-information originate ! 하단 스위치에 인터넷 경로 전파
+Router0(config-router)# end
+Router0# write memory
 
 ```
 
 ---
 
-## 3. 로드밸런싱 및 이중화 동작 분석
+## [STEP 2] Router1 설정 (ISP 2 서비스 및 로드밸런싱)
 
-1. **동적 로드밸런싱 (ECMP)**: `SW0`과 `SW1`은 OSPF를 통해 외부로 나가는 경로를 2개씩 보유합니다. 패킷은 목적지에 따라 두 ISP 라우터로 분산되어 전송됩니다.
-2. **VLAN 게이트웨이 이중화 (HSRP)**: 하단 PC들은 게이트웨이를 `192.168.10.1`로 설정합니다. 평시에는 `SW0`이 모든 트래픽을 처리하며, 장애 시 `SW1`이 약 3초 이내에 역할을 인계받아 통신 중단을 최소화합니다.
-3. **AWS 하이브리드 연동 최적화**: 내부 대역(`192.168.10.x`)과 백본 대역(`172.16.x.x`)이 AWS 기본 VPC 대역(`10.x.x.x`)과 완벽히 격리되어 있어, VPN 터널 생성 시 라우팅 충돌 없이 즉시 연동 가능합니다.
+Router1은 두 번째 ISP 회선을 통해 트래픽을 분산 처리하며 이중화를 완성합니다.
 
-> **[과금 주의]** > * AWS와 연동할 경우, **Site-to-Site VPN** 터널 당 시간당 요금(약 **$0.05**)이 발생합니다.
-> * 본 구성처럼 라우터 2대를 모두 연결할 경우 비용이 2배로 발생하므로, 비용 최적화가 필요하다면 한 쪽 터널만 상시 가동하는 정책을 고려하십시오.
-> 
-> 
+```bash
+Router> enable
+Router# configure terminal
+Router1(config)# hostname Router1
+
+! --- 외부 ISP 2 인터페이스 활성화 ---
+Router1(config)# interface GigabitEthernet0/0
+Router1(config-if)# description Link_to_ISP2
+Router1(config-if)# ip address 222.222.222.2 255.255.255.252
+Router1(config-if)# ip nat outside
+Router1(config-if)# no shutdown
+Router1(config-if)# exit
+
+! --- 내부 L3 스위치(백본) 연결 ---
+Router1(config)# interface GigabitEthernet0/1
+Router1(config-if)# ip address 172.16.3.1 255.255.255.0
+Router1(config-if)# ip nat inside
+Router1(config-if)# no shutdown
+Router1(config-if)# exit
+
+Router1(config)# interface GigabitEthernet0/2
+Router1(config-if)# ip address 172.16.2.1 255.255.255.0
+Router1(config-if)# ip nat inside
+Router1(config-if)# no shutdown
+Router1(config-if)# exit
+
+! --- NAT 및 기본 경로 설정 ---
+Router1(config)# ip route 0.0.0.0 0.0.0.0 222.222.222.1
+Router1(config)# access-list 1 permit 192.168.0.0 0.0.255.255
+Router1(config)# ip nat inside source list 1 interface GigabitEthernet0/0 overload
+
+! --- OSPF 라우팅 설정 ---
+Router1(config)# router ospf 1
+Router1(config-router)# network 172.16.3.0 0.0.0.255 area 0
+Router1(config-router)# network 172.16.2.0 0.0.0.255 area 0
+Router1(config-router)# default-information originate
+Router1(config-router)# end
+Router1# write memory
+
+```
 
 ---
 
-Next Level : AWS Site-to-Site VPN Customer Gateway 및 터널 인터페이스 설정
+## [STEP 3] SW0 설정 (VLAN 10-120 Active / Priority 110)
 
-OSPF ECMP, HSRP Active/Standby, NAT Overload, 24bit IP 설계 준수
+SW0은 모든 VLAN에 대해 **Active 게이트웨이(Priority 110)** 역할을 수행하도록 구성합니다.
+
+```bash
+Switch> enable
+Switch# configure terminal
+SW0(config)# hostname SW0
+SW0(config)# ip routing                      ! L3 라우팅 기능 활성화
+
+! --- 라우터 연결 포트 (L3 포트로 변경) ---
+SW0(config)# interface GigabitEthernet0/1
+SW0(config-if)# no switchport                ! L2 기능을 끄고 IP 부여
+SW0(config-if)# ip address 172.16.1.2 255.255.255.0
+SW0(config-if)# no shutdown
+SW0(config-if)# exit
+
+SW0(config)# interface GigabitEthernet0/2
+SW0(config-if)# no switchport
+SW0(config-if)# ip address 172.16.3.2 255.255.255.0
+SW0(config-if)# no shutdown
+SW0(config-if)# exit
+
+! --- 다중 VLAN (10~120) 및 HSRP 일괄 설정 ---
+! * 10단위로 VLAN을 생성하고 각각 HSRP 우선순위 110 부여
+SW0(config)# interface range vlan 10,20,30,40,50,60,70,80,90,100,110,120
+! * 각 VLAN 인터페이스별 IP는 수동 할당이 필요하므로 예시로 VLAN 10 설정
+SW0(config)# interface Vlan 10
+SW0(config-if)# ip address 192.168.10.2 255.255.255.0
+SW0(config-if)# standby 10 ip 192.168.10.1   ! 가상 게이트웨이 IP
+SW0(config-if)# standby 10 priority 110      ! Active 권한 확보
+SW0(config-if)# standby 10 preempt           ! 장애 복구 시 자동 회수
+SW0(config-if)# no shutdown
+
+! (나머지 VLAN 20~120번도 동일한 규칙으로 IP와 standby 그룹번호를 맞춰 설정합니다)
+
+! --- OSPF 라우팅 설정 ---
+SW0(config)# router ospf 1
+SW0(config-router)# network 172.16.1.0 0.0.0.255 area 0
+SW0(config-router)# network 172.16.3.0 0.0.0.255 area 0
+SW0(config-router)# network 192.168.0.0 0.0.255.255 area 0
+SW0(config-router)# end
+SW0# write memory
+
+```
+
+---
+
+## [STEP 4] SW1 설정 (VLAN 10-120 Standby / Priority 100)
+
+SW1은 SW0 장애 시 즉시 서비스를 승계하는 대기 장비입니다.
+
+```bash
+Switch> enable
+Switch# configure terminal
+SW1(config)# hostname SW1
+SW1(config)# ip routing
+
+! --- 라우터 연결 포트 설정 ---
+SW1(config)# interface GigabitEthernet0/1
+SW1(config-if)# no switchport
+SW1(config-if)# ip address 172.16.4.2 255.255.255.0
+SW1(config-if)# no shutdown
+SW1(config-if)# exit
+
+SW1(config)# interface GigabitEthernet0/2
+SW1(config-if)# no switchport
+SW1(config-if)# ip address 172.16.2.2 255.255.255.0
+SW1(config-if)# no shutdown
+SW1(config-if)# exit
+
+! --- 다중 VLAN 및 HSRP 설정 (Standby) ---
+SW1(config)# interface Vlan 10
+SW1(config-if)# ip address 192.168.10.3 255.255.255.0
+SW1(config-if)# standby 10 ip 192.168.10.1
+SW1(config-if)# standby 10 priority 100      ! 기본값 유지
+SW1(config-if)# standby 10 preempt
+SW1(config-if)# no shutdown
+
+! (VLAN 20~120번도 동일한 규칙으로 Standby IP를 할당합니다)
+
+! --- OSPF 라우팅 설정 ---
+SW1(config)# router ospf 1
+SW1(config-router)# network 172.16.2.0 0.0.0.255 area 0
+SW1(config-router)# network 172.16.4.0 0.0.0.255 area 0
+SW1(config-router)# network 192.168.0.0 0.0.255.255 area 0
+SW1(config-router)# end
+SW1# write memory
+
+```
+
+---
+
+## 최종 구축 설계 요약
+
+* **HSRP 이중화**: 모든 VLAN에 대해 SW0을 Active(110)로 설정하여 평상시 트래픽을 집중시키고, SW1은 Standby 상태로 대기합니다.
+* **OSPF 로드밸런싱**: L3 스위치들은 두 대의 라우터로 향하는 동일 비용 경로(ECMP)를 가집니다. 이를 통해 ISP 회선 자원을 효율적으로 분산 사용합니다.
+* **AWS 확장성**: 사설 대역을 `192.168.x.x`로 고정하여 AWS VPC의 기본 대역(`10.x.x.x`)과 IP가 충돌하지 않도록 설계했습니다.
+
+**[AWS 연동 과금 유의]**
+AWS Site-to-Site VPN 구축 시 시간당 약 **$0.05**의 비용이 터널마다 발생하며, 대량의 데이터 전송 시 데이터 처리 비용이 누적될 수 있습니다.
+
+Next Level : AWS Transit Gateway를 이용한 다중 VLAN 대규모 하이브리드 연동
+
+VLAN 10~120 생성, HSRP Priority 110, OSPF ECMP 활성화, no shutdown 완료
