--- a/모범답안0010.인터넷2중화1.md
+++ b/모범답안0010.인터넷2중화1.md
@@ -71,7 +71,7 @@ Router0(config)# ip route 0.0.0.0 0.0.0.0 111.111.111.1
 Router0(config)# access-list 1 permit 192.168.0.0 0.0.255.255  ! 모든 내부 대역 허용
 Router0(config)# ip nat inside source list 1 interface GigabitEthernet0/0 overload
 
-! --- OSPF 라우팅 설정 ---
+! --- OSPF 라우팅 설정 : 간단하게 로드밸런싱 및 최적 경로를 찾는 프로토콜이에요. ---
 Router0(config)# router ospf 1
 Router0(config-router)# network 172.16.1.0 0.0.0.255 area 0
 Router0(config-router)# network 172.16.4.0 0.0.0.255 area 0
@@ -166,7 +166,10 @@ SW0(config-if)# no shutdown
 
 ! (나머지 VLAN 20~120번도 동일한 규칙으로 IP와 standby 그룹번호를 맞춰 설정합니다)
 
-! --- OSPF 라우팅 설정 ---
+! --- OSPF 라우팅 설정 : OSPF로 간단히 로드밸런스와 failover를 해결하지만 네트워크가 복잡해지면
+! 오버헤드가 커지다가 버벅대기도 합니다. 이를 대비해 위에처럼 우선권한을 주는 작업을 또 해요ㅜㅜ---
+! 쉽게 하고 싶어서 만들었는데... 일만 더 늘어나는 샘... ^^
+
 SW0(config)# router ospf 1
 SW0(config-router)# network 172.16.1.0 0.0.0.255 area 0
 SW0(config-router)# network 172.16.3.0 0.0.0.255 area 0
