--- a/모범답안0010.인터넷2중화1.md
+++ b/모범답안0010.인터넷2중화1.md
@@ -73,8 +73,8 @@ Router0(config)# ip nat inside source list 1 interface GigabitEthernet0/0 overlo
 
 ! --- OSPF 라우팅 설정 : 간단하게 로드밸런싱 및 최적 경로를 찾는 프로토콜이에요. ---
 Router0(config)# router ospf 1
-Router0(config-router)# network 172.16.1.0 0.0.0.255 area 0
-Router0(config-router)# network 172.16.4.0 0.0.0.255 area 0
+Router0(config-router)# network 172.16.1.0 0.0.0.255 area 0   ! area 0 는 백본 에어리어를 의미해요. 이렇게 점점 에어리어가 많아져요.
+Router0(config-router)# network 172.16.4.0 0.0.0.255 area 0   ! 그래도 Vlan 별로 대표 ip, priority 등 많은 타이핑을 줄요줘요.
 Router0(config-router)# default-information originate ! 하단 스위치에 인터넷 경로 전파
 Router0(config-router)# end
 Router0# write memory
@@ -168,7 +168,7 @@ SW0(config-if)# no shutdown
 
 ! --- OSPF 라우팅 설정 : OSPF로 간단히 로드밸런스와 failover를 해결하지만 네트워크가 복잡해지면
 ! 오버헤드가 커지다가 버벅대기도 합니다. 이를 대비해 위에처럼 우선권한을 주는 작업을 또 해요ㅜㅜ---
-! 쉽게 하고 싶어서 만들었는데... 일만 더 늘어나는 샘... ^^
+! 쉽게 하고 싶어서 만들었는데... 그래도 안전을 위해 둘 다 하는 추세입니다. 
 
 SW0(config)# router ospf 1
 SW0(config-router)# network 172.16.1.0 0.0.0.255 area 0
@@ -232,9 +232,88 @@ SW1# write memory
 * **OSPF 로드밸런싱**: L3 스위치들은 두 대의 라우터로 향하는 동일 비용 경로(ECMP)를 가집니다. 이를 통해 ISP 회선 자원을 효율적으로 분산 사용합니다.
 * **AWS 확장성**: 사설 대역을 `192.168.x.x`로 고정하여 AWS VPC의 기본 대역(`10.x.x.x`)과 IP가 충돌하지 않도록 설계했습니다.
 
-**[AWS 연동 과금 유의]**
-AWS Site-to-Site VPN 구축 시 시간당 약 **$0.05**의 비용이 터널마다 발생하며, 대량의 데이터 전송 시 데이터 처리 비용이 누적될 수 있습니다.
+---
+# OSPF외 이중화 방법
 
-Next Level : AWS Transit Gateway를 이용한 다중 VLAN 대규모 하이브리드 연동
+라우터에서도 스위치의 STP(Spanning Tree Protocol) 우선순위 설정과 유사하게, 특정 장비에 우선권을 주어 주 경로(Primary)와 보조 경로(Backup)를 결정하는 방법이 있습니다.
 
-VLAN 10~120 생성, HSRP Priority 110, OSPF ECMP 활성화, no shutdown 완료
+라우팅 프로토콜인 OSPF 내에서의 우선순위(DR/BDR 선출용)와는 별개로, 실제 데이터가 나가는 관문(Gateway) 자체에 우선권을 부여하는 **FHRP(First Hop Redundancy Protocol)** 기술을 주로 사용합니다.
+
+---
+
+### 1. HSRP / VRRP를 이용한 우선순위 설정
+
+스위치에서 `spanning-tree vlan [ID] priority [값]`을 설정하듯, 라우터(또는 L3 스위치)에서는 **HSRP**나 **VRRP**를 사용하여 게이트웨이의 우선순위를 정할 수 있습니다.
+
+* **개념:** 두 대의 라우터를 하나의 가상 IP(VIP)로 묶고, **Priority(우선순위)** 값이 높은 장비를 'Active(주 장비)'로 설정합니다.
+* **설정 예시 (Cisco 기준):**
+```bash
+interface GigabitEthernet0/0
+ standby 1 ip 172.16.10.254       # 가상 게이트웨이 IP
+ standby 1 priority 110           # 우선순위 부여 (기본값 100, 높을수록 우선)
+ standby 1 preempt                # 자신이 우선순위가 높으면 즉시 Active 권한 회수
+
+```
+
+
+> 이렇게 설정하면 Priority 110인 라우터가 메인이 되고, 100인 라우터는 대기 상태가 됩니다.
+
+
+
+### 2. Floating Static Route (AD 값을 이용한 우선순위)
+
+동적 라우팅 프로토콜을 쓰지 않는다면, **Administrative Distance(AD, 관리 거리)** 값을 조절하여 경로에 우선순위를 줄 수 있습니다.
+
+* **방법:** 동일한 목적지에 대해 두 개 이상의 정적 경로를 설정하되, 보조 경로의 AD 값을 더 높게 설정합니다.
+* **설정 예시:**
+```bash
+ip route 0.0.0.0 0.0.0.0 172.16.10.2       # 메인 경로 (기본 AD 1)
+ip route 0.0.0.0 0.0.0.0 172.16.10.6 10    # 보조 경로 (AD 10으로 설정)
+
+```
+
+
+> 메인 회선이 끊기면 자동으로 AD 값이 더 큰(우선순위는 낮은) 보조 경로가 라우팅 테이블에 올라옵니다.
+
+--- 
+
+OSPF(Open Shortest Path First)는 대규모 엔터프라이즈 및 클라우드 하이브리드 환경에서 가장 널리 사용되는 **링크 상태(Link-State) 라우팅 프로토콜**입니다. 다익스트라(Dijkstra) 알고리즘을 기반으로 최단 경로를 계산하며, 계층적 구조를 통해 효율적인 네트워크 관리를 지원합니다.
+
+---
+
+### 1. OSPF의 주요 장점
+
+* **빠른 수렴 속도 (Fast Convergence):** 네트워크 토폴로지에 변화가 생기면 즉시 LSA(Link State Advertisement)를 전송하여 변경 사항을 반영하므로, RIP 같은 거리 벡터 프로토콜에 비해 복구 속도가 매우 빠릅니다.
+* **뛰어난 확장성 (Scalability):** **Area(영역)** 개념을 사용하여 네트워크를 논리적으로 분할합니다. 특정 영역 내의 상세한 토폴로지 변화가 다른 영역으로 전파되는 것을 차단하여 대규모 네트워크를 안정적으로 운영할 수 있습니다.
+* **표준 프로토콜 (Open Standard):** RFC 표준으로 정의되어 있어 Cisco, Juniper, HP 등 다양한 벤더의 장비 간에 완벽한 호환성을 제공합니다.
+* **효율적인 대역폭 사용:** 전체 라우팅 테이블을 주기적으로 전송하지 않고, 변화가 있을 때만 업데이트 정보를 멀티캐스트(224.0.0.5, 224.0.0.6)로 전송하여 네트워크 부하를 줄입니다.
+* **Loop-free 구조:** 전체 네트워크 지도를 그린 후 최단 경로를 계산하는 방식이므로, 거리 벡터 프로토콜에서 발생하는 라우팅 루프 문제가 발생하지 않습니다.
+* **VLSM 및 CIDR 지원:** 가변 길이 서브넷 마스크를 지원하여 IP 주소 공간을 낭비 없이 효율적으로 사용할 수 있습니다.
+
+### 2. OSPF의 주요 단점
+
+* **높은 리소스 소모:** 모든 라우터가 전체 네트워크 상태 정보(LSDB)를 유지하고 SPF 알고리즘을 실행해야 하므로, CPU와 RAM 사용량이 상대적으로 높습니다.
+* **설정 및 관리의 복잡성:** 네트워크 타입(Broadcast, Point-to-Point, NBMA 등)에 따라 동작 방식이 다르고, Area 설정 및 DR/BDR 선출 등 설계 단계부터 세밀한 계획이 필요합니다.
+* **계층적 설계 요구:** 반드시 **Backbone Area (Area 0)**를 중심으로 모든 영역이 연결되어야 하는 구조적 제약이 있습니다. 설계를 잘못할 경우 통신이 단절될 위험이 있습니다.
+* **불균형 부하 분산 미지원:** 동일한 비용(Cost)을 가진 경로에 대해서만 부하 분산(Equal-Cost Multi-Path)을 지원합니다. EIGRP처럼 비용이 다른 경로에 가중치를 두어 분산하는 기능은 기본적으로 제공하지 않습니다.
+
+---
+
+### 3. 요약 및 비교 테이블
+
+| 항목 | OSPF (Link-State) | RIP (Distance-Vector) | EIGRP (Hybrid) |
+| --- | --- | --- | --- |
+| **수렴 속도** | 빠름 | 느림 | 매우 빠름 |
+| **확장성** | 매우 높음 (Area 단위) | 낮음 (Max 15 Hop) | 높음 |
+| **리소스 사용** | 높음 (CPU/RAM) | 낮음 | 중간 |
+| **호환성** | 모든 벤더 표준 | 모든 벤더 표준 | 주로 Cisco (일부 표준화) |
+
+---
+
+> [!NOTE]
+> **AWS 연동 시 고려사항**
+> AWS와 온프레미스 네트워크를 연결할 때(Direct Connect 등), 내부 라우팅은 **OSPF**를 사용하더라도 AWS 가상 프라이빗 게이트웨이(VGW)와의 연동은 주로 **BGP(Border Gateway Protocol)**를 사용합니다. 따라서 하이브리드 환경에서는 두 프로토콜 간의 **Redistribution(재분배)** 설정이 중요해집니다.
+
+**Next Level :** OSPF Area 종류와 Stub Area 설정 방법
+
+OSPF Area, LSA 타입, 재분배
