Update and rename 0010.복붙스크립트.md to 0010.인터넷...복붙스크립트.md

--- a/0010.인터넷...복붙스크립트.md
+++ b/0010.인터넷...복붙스크립트.md
@@ -1,5 +1,8 @@
 네트워크 구축 과정에서 어려움을 겪는 경우를 대비하여, **Packet Tracer CLI에 그대로 복사하여 붙여넣기(Paste)** 할 수 있는 최종 설정 스크립트를 단계별로 구성하였습니다. 각 장비의 프롬프트 상태(`config`, `config-if` 등)를 명시하였으며, 필수 명령어인 `no shutdown`과 주석을 포함했습니다.
 
+```
+#erase startup-config 를 먼저 해주세요.
+```
 ---
 
 ## [STEP 1] Router0 설정 (ISP 1 및 NAT)
