--- a/0010.인터넷2중화1.md
+++ b/0010.인터넷2중화1.md
@@ -223,7 +223,79 @@ SW1(config-router)# end
 SW1# write memory
 
 ```
+본 네트워크 구성의 최하단 계층인 **Access Layer(L2 스위치)** 설정을 추가하여 전체 계층 구조를 완성합니다. L2 스위치는 사용자 PC가 연결되는 종단 장비이며, VLAN 번호의 앞자리에 맞춰 물리 포트를 할당하는 규칙을 적용합니다.
 
+---
+
+## [STEP 5] Switch0 설정 (L2 Access Switch)
+
+L2 스위치는 상단 L3 스위치(SW0, SW1)와 **Trunk**로 연결되어 여러 VLAN 트래픽을 전달하고, 각 포트에 지정된 VLAN을 할당합니다.
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch0(config)# hostname Switch0
+
+! --- 상단 L3 스위치 연결 (Trunk 구성) ---
+Switch0(config)# interface range GigabitEthernet0/1 - 2
+Switch0(config-if-range)# switchport mode trunk    ! 여러 VLAN 트래픽이 통과하도록 설정
+Switch0(config-if-range)# no shutdown
+Switch0(config-if-range)# exit
+
+! --- VLAN 생성 (10 ~ 120) ---
+Switch0(config)# vlan 10,20,30,40,50,60,70,80,90,100,110,120
+Switch0(config-vlan)# exit
+
+! --- 물리 포트에 VLAN 할당 (VLAN 앞자리 번호 = 포트 번호) ---
+! VLAN 10 -> Fa0/1 할당
+Switch0(config)# interface FastEthernet0/1
+Switch0(config-if)# switchport mode access
+Switch0(config-if)# switchport access vlan 10
+Switch0(config-if)# no shutdown
+
+! VLAN 20 -> Fa0/2 할당
+Switch0(config)# interface FastEthernet0/2
+Switch0(config-if)# switchport mode access
+Switch0(config-if)# switchport access vlan 20
+Switch0(config-if)# no shutdown
+
+! VLAN 30 -> Fa0/3 할당
+Switch0(config)# interface FastEthernet0/3
+Switch0(config-if)# switchport mode access
+Switch0(config-if)# switchport access vlan 30
+Switch0(config-if)# no shutdown
+
+! --- (VLAN 40~120번까지 동일한 규칙으로 Fa0/4 ~ Fa0/12 포트에 할당) ---
+
+Switch0(config)# end
+Switch0# write memory                             ! 설정 저장
+
+```
+
+---
+
+## 🛠️ 전체 구성 최종 점검 가이드
+
+실패 없이 모든 설정을 마쳤다면 아래 항목을 통해 동작을 검증하세요.
+
+1. **L2-L3 연결**: L2 스위치와 L3 스위치 사이의 링크가 **Green** 상태인지 확인하세요. (Trunk 설정 확인)
+2. **HSRP 상태**: L3 스위치에서 `show standby brief`를 입력하여 **SW0은 Active**, **SW1은 Standby**인지 확인하세요.
+3. **라우팅 확인**: 라우터에서 `show ip route ospf`를 통해 내부 VLAN 대역들이 모두 학습되었는지 확인하세요.
+4. **최종 통신**: 각 포트에 연결된 PC에서 외부 공인 IP(예: `111.111.111.1`)로 `ping`이 나가는지 확인하세요.
+
+---
+
+## ⚠️ AWS 연동 시 과금 주의사항
+
+본 실습 구성을 실제 AWS 환경과 연동(Site-to-Site VPN)할 경우 다음과 같은 비용이 발생합니다.
+
+* **VPN 연결 비용**: 터널당 시간당 약 **$0.05** (2개 라우터 연결 시 $0.10/hr)
+* **데이터 전송 비용**: AWS에서 온프레미스로 전송되는 데이터량에 따라 과금
+* **팁**: 실습이 끝나면 AWS 콘솔에서 **VPN Connection**과 **Customer Gateway**를 반드시 삭제해야 불필요한 과금을 막을 수 있습니다.
+
+Next Level : 하이브리드 클라우드 보안을 위한 ACL 기반 트래픽 제어 및 방화벽 설정
+
+L2 포트 할당, Trunk 구성, VLAN 10~120 생성, HSRP Active/Standby 검증, no shutdown 완료
 ---
 
 ## 최종 구축 설계 요약
