--- a/0010.인터넷...복붙스크립트.md
+++ b/0010.인터넷...복붙스크립트.md
@@ -1,197 +1,256 @@
-네트워크 구축 과정에서 어려움을 겪는 경우를 대비하여, **Packet Tracer CLI에 그대로 복사하여 붙여넣기(Paste)** 할 수 있는 최종 설정 스크립트를 단계별로 구성하였습니다. 각 장비의 프롬프트 상태(`config`, `config-if` 등)를 명시하였으며, 필수 명령어인 `no shutdown`과 주석을 포함했습니다.
+## AWS 하이브리드 연동을 위한 전 계층 이중화 구성 가이드
 
-```
-#erase startup-config 를 먼저 해주세요.
-```
----
-
-## [STEP 1] Router0 설정 (ISP 1 및 NAT)
-
-Router0은 외부 ISP 1라인(111.111.111.2)을 처리하며, 내부망의 인터넷 통신을 지원합니다.
-
-```bash
-Router> enable
-Router# configure terminal
-Router0(config)# hostname Router0
-
-! --- 외부 인터페이스 설정 ---
-Router0(config)# interface GigabitEthernet0/0
-Router0(config-if)# ip address 111.111.111.2 255.255.255.252
-Router0(config-if)# ip nat outside             ! 외부 인터페이스 선언
-Router0(config-if)# no shutdown                ! 포트 활성화
-Router0(config-if)# exit
-
-! --- 내부 백본 연결 인터페이스 ---
-Router0(config)# interface GigabitEthernet0/1
-Router0(config-if)# ip address 172.16.1.1 255.255.255.0
-Router0(config-if)# ip nat inside              ! 내부 인터페이스 선언
-Router0(config-if)# no shutdown
-Router0(config-if)# exit
-
-Router0(config)# interface GigabitEthernet0/2
-Router0(config-if)# ip address 172.16.4.1 255.255.255.0
-Router0(config-if)# ip nat inside
-Router0(config-if)# no shutdown
-Router0(config-if)# exit
-
-! --- 라우팅 및 NAT 규칙 설정 ---
-Router0(config)# ip route 0.0.0.0 0.0.0.0 111.111.111.1
-Router0(config)# access-list 1 permit 192.168.0.0 0.0.255.255
-Router0(config)# ip nat inside source list 1 interface GigabitEthernet0/0 overload
-
-! --- OSPF 동적 라우팅 ---
-Router0(config)# router ospf 1
-Router0(config-router)# network 172.16.1.0 0.0.0.255 area 0
-Router0(config-router)# network 172.16.4.0 0.0.0.255 area 0
-Router0(config-router)# default-information originate ! 인터넷 경로 전파
-Router0(config-router)# end
-Router0# write memory
-
-```
+실제 장비나 패킷트레이서 CLI에 **복사 및 붙여넣기(Paste)** 할 때 프롬프트(`Router(config)#` 등)가 섞여 들어가 에러가 발생하는 것을 방지하기 위해, 오직 순수 명령어와 주석으로만 구성된 스크립트를 제공합니다. 각 장비의 설정을 순서대로 복사하여 사용하세요.
 
 ---
 
-## [STEP 2] Router1 설정 (ISP 2 및 로드밸런싱)
+### [STEP 1] Router0 설정 (ISP 1 연결 및 NAT)
 
-Router1은 ISP 2라인(222.222.222.2)을 통해 트래픽을 분산 처리합니다.
+ISP 1라인(111.111.111.2)을 처리하며, 내부 모든 VLAN 대역의 인터넷 통신을 지원합니다.
 
 ```bash
-Router> enable
-Router# configure terminal
-Router1(config)# hostname Router1
+enable
+configure terminal
+hostname Router0
 
-Router1(config)# interface GigabitEthernet0/0
-Router1(config-if)# ip address 222.222.222.2 255.255.255.252
-Router1(config-if)# ip nat outside
-Router1(config-if)# no shutdown
-Router1(config-if)# exit
+! --- 외부 ISP 1 인터페이스 활성화 ---
+interface GigabitEthernet0/0
+ description Link_to_ISP1
+ ip address 111.111.111.2 255.255.255.252
+ ip nat outside
+ no shutdown
+exit
 
-Router1(config)# interface GigabitEthernet0/1
-Router1(config-if)# ip address 172.16.3.1 255.255.255.0
-Router1(config-if)# ip nat inside
-Router1(config-if)# no shutdown
-Router1(config-if)# exit
+! --- 내부 백본(SW0, SW1) 연결 인터페이스 ---
+interface GigabitEthernet0/1
+ ip address 172.16.1.1 255.255.255.0
+ ip nat inside
+ no shutdown
+exit
 
-Router1(config)# interface GigabitEthernet0/2
-Router1(config-if)# ip address 172.16.2.1 255.255.255.0
-Router1(config-if)# ip nat inside
-Router1(config-if)# no shutdown
-Router1(config-if)# exit
+interface GigabitEthernet0/2
+ ip address 172.16.4.1 255.255.255.0
+ ip nat inside
+ no shutdown
+exit
 
-Router1(config)# ip route 0.0.0.0 0.0.0.0 222.222.222.1
-Router1(config)# access-list 1 permit 192.168.0.0 0.0.255.255
-Router1(config)# ip nat inside source list 1 interface GigabitEthernet0/0 overload
+! --- 기본 경로 및 NAT(PAT) 설정 ---
+ip route 0.0.0.0 0.0.0.0 111.111.111.1
+access-list 1 permit 192.168.0.0 0.0.255.255
+ip nat inside source list 1 interface GigabitEthernet0/0 overload
 
-Router1(config)# router ospf 1
-Router1(config-router)# network 172.16.2.0 0.0.0.255 area 0
-Router1(config-router)# network 172.16.3.0 0.0.0.255 area 0
-Router1(config-router)# default-information originate
-Router1(config-router)# end
-Router1# write memory
+! --- OSPF 동적 라우팅 설정 ---
+router ospf 1
+ network 172.16.1.0 0.0.0.255 area 0
+ network 172.16.4.0 0.0.0.255 area 0
+ default-information originate
+end
+write memory
 
 ```
 
 ---
 
-## [STEP 3] SW0 설정 (VLAN 10-120 Active / Priority 110)
+### [STEP 2] Router1 설정 (ISP 2 연결 및 로드밸런싱)
 
-SW0은 모든 VLAN의 메인 게이트웨이 역할을 수행하도록 **Priority 110**을 적용합니다.
+ISP 2라인(222.222.222.2)을 통해 트래픽을 분산 처리하며 외부 가용성을 확보합니다.
 
 ```bash
-Switch> enable
-Switch# configure terminal
-SW0(config)# hostname SW0
-SW0(config)# ip routing                      ! L3 라우팅 활성화 필수
+enable
+configure terminal
+hostname Router1
+
+! --- 외부 ISP 2 인터페이스 활성화 ---
+interface GigabitEthernet0/0
+ description Link_to_ISP2
+ ip address 222.222.222.2 255.255.255.252
+ ip nat outside
+ no shutdown
+exit
+
+! --- 내부 백본(SW0, SW1) 연결 인터페이스 ---
+interface GigabitEthernet0/1
+ ip address 172.16.3.1 255.255.255.0
+ ip nat inside
+ no shutdown
+exit
+
+interface GigabitEthernet0/2
+ ip address 172.16.2.1 255.255.255.0
+ ip nat inside
+ no shutdown
+exit
+
+! --- 기본 경로 및 NAT(PAT) 설정 ---
+ip route 0.0.0.0 0.0.0.0 222.222.222.1
+access-list 1 permit 192.168.0.0 0.0.255.255
+ip nat inside source list 1 interface GigabitEthernet0/0 overload
+
+! --- OSPF 동적 라우팅 설정 ---
+router ospf 1
+ network 172.16.2.0 0.0.0.255 area 0
+ network 172.16.3.0 0.0.0.255 area 0
+ default-information originate
+end
+write memory
+
+```
+
+---
+
+### [STEP 3] SW0 설정 (L3 Core Active / Priority 110)
+
+모든 VLAN에 대해 **Active 게이트웨이** 역할을 수행하며, `priority 110`으로 주도권을 가집니다.
+
+```bash
+enable
+configure terminal
+hostname SW0
+ip routing
 
 ! --- 라우터 연결 (L3 포트 전환) ---
-SW0(config)# interface GigabitEthernet0/1
-SW0(config-if)# no switchport                ! L2 기능을 끄고 IP 부여
-SW0(config-if)# ip address 172.16.1.2 255.255.255.0
-SW0(config-if)# no shutdown
-SW0(config-if)# exit
+interface GigabitEthernet0/1
+ no switchport
+ ip address 172.16.1.2 255.255.255.0
+ no shutdown
+exit
 
-SW0(config)# interface GigabitEthernet0/2
-SW0(config-if)# no switchport
-SW0(config-if)# ip address 172.16.3.2 255.255.255.0
-SW0(config-if)# no shutdown
-SW0(config-if)# exit
+interface GigabitEthernet0/2
+ no switchport
+ ip address 172.16.3.2 255.255.255.0
+ no shutdown
+exit
 
-! --- 다중 VLAN(10~120) HSRP Active 설정 ---
-! * VLAN 10 예시 (나머지 VLAN 20~120도 동일한 패턴으로 반복)
-SW0(config)# vlan 10
-SW0(config-vlan)# exit
-SW0(config)# interface Vlan 10
-SW0(config-if)# ip address 192.168.10.2 255.255.255.0
-SW0(config-if)# standby 10 ip 192.168.10.1   ! 가상 게이트웨이 IP
-SW0(config-if)# standby 10 priority 110      ! Active 권한 부여
-SW0(config-if)# standby 10 preempt           ! 우선순위 높은 장비가 Active 선점
-SW0(config-if)# no shutdown
-SW0(config-if)# exit
+! --- 하단 L2 스위치 연결 (Trunk) ---
+interface FastEthernet0/1
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ no shutdown
+exit
 
-! --- OSPF 설정 ---
-SW0(config)# router ospf 1
-SW0(config-router)# network 172.16.1.0 0.0.0.255 area 0
-SW0(config-router)# network 172.16.3.0 0.0.0.255 area 0
-SW0(config-router)# network 192.168.0.0 0.0.255.255 area 0
-SW0(config-router)# end
-SW0# write memory
+! --- 다중 VLAN(10~120) 생성 및 HSRP Active 설정 ---
+vlan 10,20,30,40,50,60,70,80,90,100,110,120
+exit
+
+! VLAN 10 설정 (나머지 VLAN도 동일한 방식으로 IP/Standby 그룹 수정하여 추가)
+interface Vlan 10
+ ip address 192.168.10.2 255.255.255.0
+ standby 10 ip 192.168.10.1
+ standby 10 priority 110
+ standby 10 preempt
+ no shutdown
+exit
+
+! --- OSPF 라우팅 ---
+router ospf 1
+ network 172.16.1.0 0.0.0.255 area 0
+ network 172.16.3.0 0.0.0.255 area 0
+ network 192.168.0.0 0.0.255.255 area 0
+end
+write memory
 
 ```
 
 ---
 
-## [STEP 4] SW1 설정 (VLAN 10-120 Standby)
+### [STEP 4] SW1 설정 (L3 Core Standby)
 
-SW1은 장애 대비용으로 기본 우선순위(100)를 유지합니다.
+SW0 장애 시 트래픽을 승계하는 **Standby** 장비로, 기본 우선순위(100)를 사용합니다.
 
 ```bash
-Switch> enable
-Switch# configure terminal
-SW1(config)# hostname SW1
-SW1(config)# ip routing
+enable
+configure terminal
+hostname SW1
+ip routing
 
-SW1(config)# interface GigabitEthernet0/1
-SW1(config-if)# no switchport
-SW1(config-if)# ip address 172.16.4.2 255.255.255.0
-SW1(config-if)# no shutdown
-SW1(config-if)# exit
+interface GigabitEthernet0/1
+ no switchport
+ ip address 172.16.4.2 255.255.255.0
+ no shutdown
+exit
 
-SW1(config)# interface GigabitEthernet0/2
-SW1(config-if)# no switchport
-SW1(config-if)# ip address 172.16.2.2 255.255.255.0
-SW1(config-if)# no shutdown
-SW1(config-if)# exit
+interface GigabitEthernet0/2
+ no switchport
+ ip address 172.16.2.2 255.255.255.0
+ no shutdown
+exit
 
-! --- 다중 VLAN(10~120) HSRP Standby 설정 ---
-SW1(config)# vlan 10
-SW1(config-vlan)# exit
-SW1(config)# interface Vlan 10
-SW1(config-if)# ip address 192.168.10.3 255.255.255.0
-SW1(config-if)# standby 10 ip 192.168.10.1
-SW1(config-if)# standby 10 priority 100      ! 기본값 유지
-SW1(config-if)# standby 10 preempt
-SW1(config-if)# no shutdown
-SW1(config-if)# exit
+interface FastEthernet0/1
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ no shutdown
+exit
 
-! --- OSPF 설정 ---
-SW1(config)# router ospf 1
-SW1(config-router)# network 172.16.2.0 0.0.0.255 area 0
-SW1(config-router)# network 172.16.4.0 0.0.0.255 area 0
-SW1(config-router)# network 192.168.0.0 0.0.255.255 area 0
-SW1(config-router)# end
-SW1# write memory
+! --- 다중 VLAN 생성 및 HSRP Standby 설정 ---
+vlan 10,20,30,40,50,60,70,80,90,100,110,120
+exit
+
+interface Vlan 10
+ ip address 192.168.10.3 255.255.255.0
+ standby 10 ip 192.168.10.1
+ standby 10 priority 100
+ standby 10 preempt
+ no shutdown
+exit
+
+! --- OSPF 라우팅 ---
+router ospf 1
+ network 172.16.2.0 0.0.0.255 area 0
+ network 172.16.4.0 0.0.0.255 area 0
+ network 192.168.0.0 0.0.255.255 area 0
+end
+write memory
 
 ```
 
 ---
 
-## 💡 주의사항 및 확인 방법
+### [STEP 5] Switch0 설정 (L2 Access Switch)
 
-* **복사 방법**: `!`로 시작하는 주석을 제외하고 명령어를 순서대로 복사하여 CLI 창에서 마우스 우클릭 -> **Paste**를 누르세요.
-* **통신 확인**: PC에서 `ping 8.8.8.8` 또는 `ping 111.111.111.1`을 통해 인터넷 연결을 확인합니다.
-* **상태 확인**: 스위치에서 `show standby brief`를 입력하여 HSRP 상태(Active/Standby)가 정상인지 체크합니다.
-* **AWS 과금 주의**: 실제 환경에서 AWS VPN을 구성할 경우 터널당 시간 비용(약 $0.05/hr)이 발생하므로 실습 후 반드시 자원을 삭제해야 합니다.
+PC가 연결되는 종단 스위치로, 포트 번호에 대응하는 VLAN을 할당합니다.
 
-Next Level : AWS Transit Gateway와 BGP를 이용한 다중 VLAN 라우팅 통합 분산
+```bash
+enable
+configure terminal
+hostname Switch0
 
-복사 붙여넣기 스크립트, no shutdown 포함, HSRP Priority 110, OSPF ECMP 활성화
+! --- 상단 L3 스위치 연결 (Trunk) ---
+interface range GigabitEthernet0/1 - 2
+ switchport mode trunk
+ no shutdown
+exit
+
+! --- VLAN 생성 및 포트 할당 (VLAN 앞자리 = 포트 번호) ---
+vlan 10,20,30,40,50,60,70,80,90,100,110,120
+exit
+
+interface FastEthernet0/1
+ switchport mode access
+ switchport access vlan 10
+ no shutdown
+
+interface FastEthernet0/2
+ switchport mode access
+ switchport access vlan 20
+ no shutdown
+
+! (나머지 포트 Fa0/3 ~ Fa0/12도 동일 규칙으로 VLAN 30~120 할당)
+end
+write memory
+
+```
+
+---
+
+## 💡 최종 설계 핵심 요약
+
+* **HSRP 가용성**: `priority 110` 설정을 통해 SW0이 주 게이트웨이가 되며, 장애 발생 시 SW1이 약 3초 이내에 서비스를 인계받습니다.
+* **OSPF 로드밸런싱**: 동일 비용 다중 경로(ECMP)를 활용하여 외부 트래픽을 두 ISP 회선으로 자동 분산합니다.
+* **AWS 연동 최적화**: 온프레미스 대역(`192.168.x.x`)을 사용하여 AWS VPC의 표준 대역(`10.0.0.0/16`)과 IP가 겹치지 않게 설계했습니다.
+
+**[AWS 과금 안내]**
+AWS Site-to-Site VPN 사용 시 시간당 약 **$0.05**의 비용이 터널마다 발생합니다. 실습용이라면 실습 종료 후 반드시 AWS 콘솔에서 VPN 자원을 삭제하시기 바랍니다.
+
+Next Level : 하이브리드 클라우드 보안을 위한 ACL 기반 트래픽 제어 및 방화벽 설정
+
+HSRP Priority 110, OSPF ECMP, L2/L3 Trunking, no shutdown 명시, 프롬프트 제거 스크립트 완료
