--- a/0020.완전2중화-클라우드.md
+++ b/0020.완전2중화-클라우드.md
@@ -49,16 +49,12 @@
 |  | G0/1 (LAN) | 172.16.1.1 /24 | Backbone 0 연결 |
 | **Router(2)** | G0/0 (WAN) | 222.222.222.2 /30 | ISP 2 연결 (Cloud-PT) |
 |  | G0/1 (LAN) | 172.16.2.1 /24 | Backbone 1 연결 |
-| **MultiLayer Switch0**<br>
-
-<br>(Backbone 1 / Active) | Routed Port 1 | 172.16.1.2 /24 | Router3 업링크 |
+| **MultiLayer Switch0** | Routed Port 1 | 172.16.1.2 /24 | Router3 업링크 |
 |  | Routed Port 2 | 172.16.3.2 /24 | Switch13 연결 |
 |  | Routed Port 3 | 172.16.5.2 /24 | Router4 연결 |
 |  | **VLAN 10 (SVI)** | **192.168.10.2 /24** | 내부망 게이트웨이 (Physical) |
 |  | **VLAN 10 (VIP)** | **192.168.10.1 /24** | **HSRP 가상 게이트웨이** |
-| **MultiLayer Switch1**<br>
-
-<br>(Backbone 2 / Standby) | Routed Port 1 | 172.16.2.2 /24 | Router(2) 업링크 |
+| **MultiLayer Switch1** | Routed Port 1 | 172.16.2.2 /24 | Router(2) 업링크 |
 |  | Routed Port 2 | 172.16.4.2 /24 | Switch13 연결 |
 |  | Routed Port 3 | 172.16.6.2 /24 | Router4 연결 |
 |  | **VLAN 10 (SVI)** | **192.168.10.3 /24** | 내부망 게이트웨이 (Physical) |
