--- a/0020.완전2중화-클라우드.md
+++ b/0020.완전2중화-클라우드.md
@@ -92,7 +92,7 @@ Switch(config)# hostname Backbone-Active
 ! 1. 라우팅 기능 활성화
 Backbone-Active(config)# ip routing
 
-! 2. VLAN 생성
+! 2. VLAN 생성 반복
 Backbone-Active(config)# vlan 10
 Backbone-Active(config-vlan)# name Sales_Dept
 Backbone-Active(config-vlan)# exit
